--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,9 @@ tomcat.protocolHeader=x-forwarded-proto
 tomcat.remoteIpHeader=x-forwarded-for
 tomcat.backgroundProcessorDelay=30
 {"addressLine1": "2000 E San TanQQQQ St","city": "Chandler","countryName": "United States","postalCode": "85225","state": "AZ"}
+
+# db
+#spring.datasource.url=jdbc:mysql://node8663-env-6939212.molddata.cloud/admin
+#spring.datasource.username=admin
+#spring.datasource.password=P@ssw0rd!
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
