--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <version>1.0.1.RELEASE</version>
     </parent>
 
-    <name>Example Spring Boot MVC Application</name>
+    <name>UCMS web site</name>
 
     <properties>
         <java.version>1.8</java.version>
