--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,8 @@
 
     </dependencies>
 
-    <build>                       
+    <build>
+        <finalName>ucms</finalName>
 
         <plugins>
             <!--<plugin>-->
