--- a/pom.xml
+++ b/pom.xml
@@ -80,12 +80,11 @@
             <artifactId>hibernate-validator</artifactId>
         </dependency>
 
-        <!-- HSQLDB -->
+        <!-- h2 -->
 
         <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-            <scope>runtime</scope>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
         </dependency>
 
         <!-- Guava -->
