prod profile is now default

--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,8 @@
         <profile>
             <id>prod</id>
 
+            <activation><activeByDefault>true</activeByDefault></activation>
+
             <properties>
                 <spring.profiles.active>prod</spring.profiles.active>
             </properties>
