changed from production to prod

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 # suppress inspection "UnusedProperty" for whole file
-#    -Dspring.profiles.active=production
+#    -Dspring.profiles.active=prod
 
 # Spring
 spring.profiles.active=prod
