--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
             <artifactId>jstl</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -164,12 +170,7 @@
                     <artifactId>postgresql</artifactId>
                     <version>9.4.1208</version>
                 </dependency>
-
-                <dependency>
-                    <groupId>commons-dbcp</groupId>
-                    <artifactId>commons-dbcp</artifactId>
-                    <version>1.4</version>
-                </dependency></dependencies>
+            </dependencies>
         </profile>
     </profiles>
 
